--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-  "presets": ["es2015","react"],
+  "presets": ["es2015","react","stage-0"],
   "plugins": [
-   ["import", { "libraryName": "antd", "style": "css" }]
+   ["transform-decorators-legacy","transform-class-properties","import", { "libraryName": "antd", "style": "css" }]
   ]
  }
