--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-import": "^1.4.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
     "json-loader": "^0.5.7",
@@ -28,6 +31,8 @@
     "cors-prefetch-middleware": "^1.0.0",
     "express": "^4.15.4",
     "images-upload-middleware": "^1.1.1",
+    "mobx": "^3.2.2",
+    "mobx-react": "^4.2.2",
     "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "react": "^15.6.1",
