--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "pm2 start server.js"
   },
   "keywords": [],
   "author": "",
@@ -28,18 +29,15 @@
   },
   "dependencies": {
     "antd": "^2.12.8",
-    "cors-prefetch-middleware": "^1.0.0",
     "express": "^4.15.4",
-    "images-upload-middleware": "^1.1.1",
     "mobx": "^3.2.2",
     "mobx-react": "^4.2.2",
-    "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.2",
-    "react-images-uploader": "^1.1.0",
     "react-router-dom": "^4.2.2",
+    "serve-favicon": "^2.4.4",
     "sha1": "^1.1.1",
     "shortid": "^2.2.8",
     "superagent": "^3.6.0"
