--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-  "presets": ["es2015","react","stage-0"],
+  "presets": ["react","es2015","stage-1"],
   "plugins": [
-   ["transform-decorators-legacy","transform-class-properties","import", { "libraryName": "antd", "style": "css" }]
+   ["transform-decorators-legacy","import", { "libraryName": "antd", "style": "css" }]
   ]
  }
