--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "pm2 start server.js"
+    "start": "pm2 start server.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "css-loader": "^0.28.5",
     "file-loader": "^0.11.2",
     "json-loader": "^0.5.7",
@@ -37,6 +38,7 @@
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.2",
     "react-router-dom": "^4.2.2",
+    "react-sortable-hoc": "^0.6.8",
     "serve-favicon": "^2.4.4",
     "sha1": "^1.1.1",
     "shortid": "^2.2.8",
